# docs/swagger.yaml
@@ -20,6 +20,51 @@ paths:
       summary: 用户登录
       tags:
       - 公共方法
+  /problem-create:
+    post:
+      parameters:
+      - description: token
+        in: header
+        name: token
+        required: true
+        type: string
+      - description: title
+        in: formData
+        name: title
+        required: true
+        type: string
+      - description: content
+        in: formData
+        name: content
+        required: true
+        type: string
+      - description: max_runtime
+        in: formData
+        name: max_runtime
+        required: true
+        type: string
+      - description: max_mem
+        in: formData
+        name: max_mem
+        required: true
+        type: string
+      - description: category_ids
+        in: formData
+        name: category_ids
+        type: array
+      - description: test_case
+        in: formData
+        name: test_case
+        required: true
+        type: array
+      responses:
+        "200":
+          description: '{"code":"200","data":""}'
+          schema:
+            type: string
+      summary: 问题创建
+      tags:
+      - 管理员私有方法
   /problem-detail:
     get:
       parameters:
